[project]
name = "mito-custom-llm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "mito-ai-core",
    "uvicorn>=0.50.2",
]

[tool.uv.sources]
mito-ai-core = { path = "../mito/mito-ai-core", editable = true }
